# Generated by Django 6.0.6 on 2026-07-10 12:01

import datetime
import django.core.validators
import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('calendarios', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Evento',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('criado_em', models.DateTimeField(auto_now_add=True)),
                ('alterado_em', models.DateTimeField(auto_now=True)),
                ('titulo', models.CharField(max_length=100)),
                ('conteudo', models.CharField(blank=True, max_length=500)),
                ('data', models.DateField(validators=[django.core.validators.MinValueValidator(datetime.date(2000, 1, 1)), django.core.validators.MaxValueValidator(datetime.date(2050, 12, 31))])),
                ('inicio', models.TimeField()),
                ('fim', models.TimeField()),
                ('calendario', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='eventos', related_query_name='evento', to='calendarios.calendario')),
            ],
            options={
                'abstract': False,
            },
        ),
    ]
