# Generated by Django 6.0.6 on 2026-07-10 12:01

import django.core.validators
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='MembroDeTurma',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('criado_em', models.DateTimeField(auto_now_add=True)),
                ('alterado_em', models.DateTimeField(auto_now=True)),
                ('eh_admin', models.BooleanField()),
                ('numero_paleta', models.PositiveIntegerField(validators=[django.core.validators.MaxValueValidator(9)])),
            ],
        ),
        migrations.CreateModel(
            name='Turma',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('criado_em', models.DateTimeField(auto_now_add=True)),
                ('alterado_em', models.DateTimeField(auto_now=True)),
                ('nome', models.CharField(max_length=100)),
                ('descricao', models.CharField(blank=True, max_length=500)),
                ('codigo', models.CharField(max_length=6, unique=True)),
            ],
            options={
                'abstract': False,
            },
        ),
    ]
